--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id="bloc_page">
             <header>
                 <div id='logo'>
-                    <img src="" alt="">
+                    <a href="index.html"><img src="C:\cygwin64\home\Florian\P2\imge\images\logo\Reservia.png" alt="logo reservia"></a>
                 </div>
 
                 <div id="inscrire">
@@ -50,32 +50,32 @@
             <div id="menu1">
                 <h1>Hébergements à Marseille</h1>
                 <div id="hebergement">
-                    <img src="/image.zip/images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
                     <h2>Auberge la Cannebière</h2>
                     <p>Nuit à partir de <strong>25€</strong></p>
                 </div>
                 <div id="hebergement"> 
-                    <img src="" alt="Hôtel du port">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
                     <h2>Hôtel du port</h2>
                     <p>Nuit à partir de <strong>52€</strong></p>
                 </div>
                 <div id="hebergement">
-                    <img src="" alt="Hôtel les mouettes">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
                     <h2>Hôtel les mouettes</h2>
                     <p>Nuit à partir de <strong>76€</strong></p>
                 </div>
                 <div id="hebergement">
-                    <img src="" alt="Hôtel de la mer">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
                     <h2>Hôtel de la mer</h2>
                     <p>Nuit à partir de <strong>46€</strong></p>
                 </div>
                 <div id="hebergement">
-                    <img src="" alt="Auberge Le Panier">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
                     <h2>Auberge Le Panier</h2>
                     <p>Nuit à partir de <strong>23€</strong></p>
                 </div>
                 <div id="hebergement">
-                    <img src="" alt="Hôtel chez Amina">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
                     <h2>AHôtel chez Amina</h2>
                     <p>Nuit à partir de <strong>96€</strong></p>
                 </div>
@@ -84,17 +84,17 @@
             <div id="menu2">
                 <h1>Les plus populaires</h1>
                 <div id="populaires">
-                    <img src="" alt="Hôtel Le soleil du matin">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
                     <h2>Hôtel Le soleil du matin</h2>
                     <p>Nuit à partir de <strong>128€</strong></p>
                 </div>
                 <div id="populaires"> 
-                    <img src="" alt="Au coeur de l'eau Chambres d'hôtes">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                     <h2>Au coeur de l'eau Chambres d'hôtes</h2>
                     <p>Nuit à partir de <strong>71€</strong></p>
                 </div>
                 <div id="populaires">
-                    <img src="" alt="Hôtel Tout bleu et Blanc">
+                    <img src="C:\cygwin64\home\Florian\P2\imge\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc">
                     <h2>Hôtel Tout bleu et Blanc</h2>
                     <p>Nuit à partir de <strong>68€</strong></p>
                 </div>
@@ -103,27 +103,27 @@
             <h1>Activités à Marseille</h1>
 
             <div id="act1">
-                <img src="" alt="Vieux Port">
+                <img src="C:\cygwin64\home\Florian\P2\imge\images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
                 <h2>Vieux Port</h2>
              </div>
              <div id="act2">
-                <img src="" alt="Fort de Pomègues">
+                <img src="C:\cygwin64\home\Florian\P2\imge\images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                 <h2>Fort de Pomègues</h2>
              </div>
              <div id="act3">
-                <img src="" alt="Îles du Frioul">
+                <img src="C:\cygwin64\home\Florian\P2\imge\images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
                 <h2>Îles du Frioul</h2>
              </div>
              <div id="act4">
-                <img src="" alt="Parc National des Calanques">
+                <img src="C:\cygwin64\home\Florian\P2\imge\images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
                 <h2>Parc National des Calanques</h2>
              </div>
              <div id="act5">
-                <img src="" alt="Notre-Dame-de-la-Garde">
+                <img src="C:\cygwin64\home\Florian\P2\imge\images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                 <h2>Notre-Dame-de-la-Garde</h2>
              </div>
              <div id="act6">
-                <img src="" alt="Parc Longchamp">
+                <img src="C:\cygwin64\home\Florian\P2\imge\images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
                 <h2>Parc Longchamp</h2>
              </div>
 
