--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <P><i class="fas fa-info-circle InformationIcon"></i>Plus de 500 logements sont disponibles dans cette ville</P>
 
-            <div class="part1">
+            <div class="part1" id="Hebergement">
               <div class="menu1">
                 <h1 class="t1">Hébergements à Marseille</h1>
                 <a href="">
