--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
     <body>
         <div id="bloc_page">
             <header>
-                <div>
-                    <a href="index.html"><img src="imge/images/logo/Reservia.svg" alt="logo reservia" class="logo"></a>
-                </div>
+                <nav>
+                    <div>
+                        <a href="index.html"><img src="imge/images/logo/Reservia.svg" alt="logo reservia" class="logo"></a>
+                    </div>
               
-                <div class="nav1">
-                    <a href="#Hebergement">Hébergements</a>
-                </div>
-                <div class="nav2">
-                    <a href="#Activite">Activités</a>
-                </div>
-                <div class="inscrire">
-                    <a href=""><strong>S'inscrire</strong></a>
-                </div>  
+                    <div class="nav1">
+                        <a href="#Hebergement">Hébergements</a>
+                    </div>
+                    <div class="nav2">
+                        <a href="#Activite">Activités</a>
+                    </div>
+                    <div class="inscrire">
+                        <a href=""><strong>S'inscrire</strong></a>
+                    </div>
+                </nav>  
             </header>
 
             <section>
